# steeleye-data-engineer-assessment

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/steeleye/: __init__.py  __main__.py  config.py  downloader.py  exceptions.py  parser.py  pipeline.py  storage.py  transformer.py
tests/integration/: test_pipeline.py
tests/unit/: test_downloader.py  test_parser.py  test_storage.py  test_transformer.py
